@@ -1,5 +1,10 @@
 Sat Feb 23 13:08:47 2002  Gregory Casamento <greg_casamento@yahoo.com>
 
+	* NSOutlineView-test/NSOutlineView-test.m:  Further improvements
+	to this test bundle to exercise NSOutlineView.
+
+Sat Feb 23 13:08:47 2002  Gregory Casamento <greg_casamento@yahoo.com>
+
 	* Added NSOutlineView-test.m to the test directory.
 
 Wed Feb 20 19:28:52 2002  Nicola Pero  <nicola@brainstorm.co.uk>
